fixed run off letters

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
               </div>
               <div class="service-card">
                 <i class="fa fa-user"></i>
-                <h2>UX/UI Developer</h2>
+                <h2>UX/UI Designer</h2>
                 <p>user interface development</p>
               </div>
               <div class="service-card">
@@ -266,12 +266,12 @@
               </div>
               <div class="service-card">
                 <i class="fa fa-user"></i>
-                <h2>NEWTUBE</h2>
+                <h2>Data Engineer</h2>
                 <p>front end development</p>
               </div>
               <div class="service-card">
                 <i class="fa fa-user"></i>
-                <h2>BOOTUBE</h2>
+                <h2>DevOps Engineer</h2>
                 <p>front end development</p>
               </div>
             </div>
@@ -316,10 +316,10 @@
                       </div>
                       <div class="pic">
                         <img src="./Assets//IMG_7092.jpg" alt="img">
-                    </div>
-                    <div class="pic">
-                      <img src="./Assets//IMG_7093.jpg" alt="img">
-                  </div>
+                      </div>
+                      <div class="pic">
+                        <img src="./Assets//IMG_7093.jpg" alt="img">
+                      </div>
                   </div>
               </div>
           </section>
