corrected the positioning of content on the resume slide. Also correct the css for the resume and contact sizes of mobile

--- a/index.html
+++ b/index.html
@@ -148,29 +148,34 @@
 
                       <h3>CERTIFICATION</h3>
 
-                      Digital Crafts Full Stack Web Development Certification
-                        <br>
-                        <h4 class="dig1">Front-End Training: </h4>
-                        <p class="digi1">HTML <br>
+                Digital Crafts Full Stack Web Development Certification
+                <br>
+                <div class="digitalContent">
+                  <div class="training">
+                    <h4>Front-End: </h4>
+                    <p class="training">
+                        HTML <br>
                         CSS <br>
                         JavaScript <br>
                         React <br>
                         Command Line <br>
                         Frameworks <br>
                         APIs 
-                        </p>
-                        <h4 class="dig2">Back-End Training: </h4>
-                        <p class="digi2">
-                         Databases <br>
-                         Node.js <br>
-                         Express <br>
-                         Terminal <br>
-                         Npm Modules <br> 
-                         Get & Post <br>
-                         HTTP <br> 
-                         Hosting 
-                        </p>
-                      
+                    </p>
+                </div>
+                <div class="training">
+                    <h4>Back-End: </h4>
+                    <p class="training">
+                        Databases <br>
+                        Node.js <br>
+                        Express <br>
+                        Npm Modules <br> 
+                        Get & Post <br>
+                        HTTP <br> 
+                        Hosting 
+                    </p>
+                </div>
+                      </div>
                     </div>
 
                     <div class="resume-image">
