--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
               <img src='https://i.ibb.co/Q60tW7Q/IMG-8353.jpg'/>
             </div>
             <div class='slider-item'>
-              <img src='https://upload.wikimedia.org/wikipedia/commons/thumb/4/4c/Typescript_logo_2020.svg/2048px-Typescript_logo_2020.svg.png'/>
+              <img src='https://i.ibb.co/rMCxXTY/IMG-8372.jpg'/>
             </div>
             <div class='slider-item'>
               <img src='https://upload.wikimedia.org/wikipedia/commons/thumb/4/4c/Typescript_logo_2020.svg/2048px-Typescript_logo_2020.svg.png'/>
@@ -649,6 +649,39 @@
         correspondingLink.style.display = 'block';
       }
     }
+  </script>
+   <!-- project slide function -->
+  <script>
+  
+  let items = document.querySelectorAll('.purchase-slider .slider-item');
+  let pnext = document.getElementById('pnext');
+  let pprev = document.getElementById('pprev');
+  let thumbnails = document.querySelectorAll('.thumbnail .slider-item');
+
+  let countItem = items.length;
+  let itemActive = 0;
+
+  pnext.onclick = function(){
+    itemActive = (itemActive + 1) % countItem;
+    showSlider();
+  }
+
+  pprev.onclick = function(){
+    itemActive = (itemActive - 1 + countItem) % countItem;
+    showSlider();
+  }
+
+  function showSlider() {
+  let itemActiveOld = document.querySelector('.purchase-slider .slider-list .slider-item.active');
+  let thumbnailActiveOld = document.querySelector('.thumbnail .slider-item.active');
+
+  itemActiveOld.classList.remove('active');
+  thumbnailActiveOld.classList.remove('active');
+
+  items[itemActive].classList.add('active');
+  thumbnails[itemActive].classList.add('active');
+}
+
   </script>
   
   <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.1.0/typed.umd.js" integrity="sha512-+2pW8xXU/rNr7VS+H62aqapfRpqFwnSQh9ap6THjsm41AxgA0MhFRtfrABS+Lx2KHJn82UOrnBKhjZOXpom2LQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
