updated font used in projects section

--- a/index.html
+++ b/index.html
@@ -388,8 +388,8 @@
             <div class='slider-item active'>
               <img src='https://i.ibb.co/ZXN9jDR/home-2.png'/>
               <div class='purchase-content'>
-                <p>Trail Ahead</p>
-                <h2>Trail </h2>
+                <p>Full Stack</p>
+                <h2>Trail Ahead</h2>
                 <p>the tip of the tongue the lip the teeth</p>
                 <button onclick="window.location.href='https://trail-ahead.onrender.com/'" class="deployed">Live</button>
                 <button onclick="window.location.href='https://github.com/DQuaya/Trail-Ahead-Front-End'" class="github">GitHub</button>
